syntax = "proto3";

package instructor;

option java_package = "com.suadvisor.instructor";
option java_multiple_files = true;

// ─────────────────────────────────────────────
// Messages
// ─────────────────────────────────────────────

message InstructorRequest {
  string instructor_name = 1; // normalized, e.g. "Ercan Solak"
  string course_code     = 2; // optional — filter by course
}

message UploadRequest {
  string batch_id      = 1;  // UUID, generated by client
  bytes  content       = 2;  // raw .txt WhatsApp export
  string uploaded_by   = 3;  // admin user ID
  string filename      = 4;
}

message UploadResponse {
  string        batch_id      = 1;
  int32         total_messages = 2;
  int32         parsed_reviews = 3;
  bool          success        = 4;
  string        error          = 5;
  repeated PreviewReview preview = 6; // first 10 reviews for admin approval
}

message PreviewReview {
  string instructor_name  = 1;
  string course_code      = 2;
  string anonymized_text  = 3;
  string sentiment        = 4; // "positive" | "negative" | "neutral"
}

message ConfirmUploadRequest {
  string batch_id    = 1;
  bool   approved    = 2; // if false, batch is discarded
  string approved_by = 3;
}

message ConfirmUploadResponse {
  string batch_id      = 1;
  int32  ingested_count = 2;
  bool   success        = 3;
  string error          = 4;
}

message DeleteBatchRequest {
  string batch_id = 1;
}

message DeleteBatchResponse {
  bool   success = 1;
  int32  deleted_count = 2;
  string error   = 3;
}

message ListRequest {
  string faculty      = 1; // optional filter
  string course_code  = 2; // optional filter
  int32  page         = 3;
  int32  page_size    = 4;
}

// ─── Summary / Response ─────────────────────────

message InstructorSummary {
  string   instructor_name        = 1;
  string   course_code            = 2;
  int32    positive_count         = 3;
  int32    negative_count         = 4;
  int32    neutral_count          = 5;
  repeated string top_positive_keywords = 6;
  repeated string top_negative_keywords = 7;
  string   recommendation         = 8; // RAG-generated 1-sentence summary
  double   sentiment_score        = 9; // -1.0 (very negative) to 1.0 (very positive)
}

message InstructorListItem {
  string instructor_name = 1;
  int32  total_reviews   = 2;
  double sentiment_score = 3;
  repeated string courses = 4;
}

message InstructorList {
  repeated InstructorListItem instructors = 1;
  int32                       total       = 2;
}

// ─────────────────────────────────────────────
// Service
// ─────────────────────────────────────────────

service InstructorService {
  rpc GetInstructorSummary (InstructorRequest)       returns (InstructorSummary);
  rpc UploadWhatsappBatch  (UploadRequest)            returns (UploadResponse);
  rpc ConfirmUpload        (ConfirmUploadRequest)     returns (ConfirmUploadResponse);
  rpc DeleteBatch          (DeleteBatchRequest)       returns (DeleteBatchResponse);
  rpc ListInstructors      (ListRequest)              returns (InstructorList);
}
